# pysatl-tsp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yaml
pysatl_tsp/core/: handler.py
pysatl_tsp/core/data_providers/: __init__.py  abstract.py  database_data_provider.py  file_data_provider.py  simple_data_provider.py  websocket_data_provider.py
pysatl_tsp/core/processor/: __init__.py  combine_handler.py  filter_handler.py  inductive_handler.py  lag_handler.py  mapping_handler.py  sampling_handler.py  tee_handler.py
pysatl_tsp/core/processor/inductive/: inductive_handler.py  moving_window_handler.py  weighted_moving_average_handler.py
pysatl_tsp/core/scrubber/: __init__.py  abstract.py  linear_scrubber.py  segmentation_scrubber.py
pysatl_tsp/implementations/: __init__.py
pysatl_tsp/implementations/processor/: __init__.py  dema_handler.py  ema_handler.py  fwma_handler.py  hma_handler.py  kalman_filter_handler.py  midpoint_handler.py  midprice_handler.py  ohlc4_handler.py  pwma_handler.py  rma_handler.py  sma_handler.py  t3_handler.py  tema_handler.py  time_series_cross_validator.py  trima_handler.py  wma_handler.py  zlma_handler.py
tests/: conftest.py  utils.py
tests/test_core/: test_data_providers.py  test_db.py  test_processors.py  test_scrubbers.py  test_ws.py
tests/test_implementations/: test_dema.py  test_ema.py  test_fwma.py  test_hma.py  test_kalman.py  test_midpoint.py  test_midprice.py  test_ohlc4.py  test_processors.py  test_pwma.py  test_rma.py  test_sma.py  test_t3.py  test_tema.py  test_trima.py  test_tscv.py  test_wma.py  test_zlma.py
ts_flow/core/: __init__.py  handler.py
ts_flow/core/data_providers/: __init__.py  abstract.py  file_data_provider.py  simple_data_provider.py
ts_flow/core/processor/: filter_handler.py  mapping_handler.py  sampling_handler.py
ts_flow/core/scrubber/: __init__.py  abstract.py  linear_scrubber.py  segmentation_scrubber.py
